--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
     build:
       context: ./site
       dockerfile: Dockerfile
+      args:
+        VITE_API_BASE_URL: http://72.60.202.55:5000
     container_name: turkmen-website
     restart: unless-stopped
     ports:
@@ -35,6 +37,8 @@ services:
     build:
       context: ./cms
       dockerfile: Dockerfile
+      args:
+        VITE_API_BASE_URL: http://72.60.202.55:5000
     container_name: turkmen-cms
     restart: unless-stopped
     ports:
