--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     environment:
       - DATABASE_URL=postgresql://neondb_owner:npg_z1jsbUcT7Pdp@ep-twilight-haze-aehcj9za-pooler.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require
       - ORIGIN=http://72.60.202.55:5001,http://72.60.202.55:5002
+      - SECRET_KEY=a8f5b6d7c6e0f5a3b1c8d9e2f6a7b4c1d8e9f0a2b5c6d7e8f9a0b3c4d5e6f7a8
     networks:
       - turkmen-network
 
